ahlm2_dalu/svn_zabbix/Diablo Dawn 2/zabbix_log/ZabbixDiff_GameIptablesCurrent.log
-A INPUT -s 153.35.91.117/32 -p tcp -m multiport --dports 29034 -j ACCEPT 
-A INPUT -s 211.103.26.117/32 -p tcp -m multiport --dports 29034 -j ACCEPT 
-A INPUT -s 221.228.102.85/32 -p tcp -m multiport --dports 29034 -j ACCEPT 
-A INPUT -s 221.6.115.232/32 -p tcp -m multiport --dports 29034 -j ACCEPT 
-A INPUT -s 211.103.25.40/32 -p tcp -m multiport --dports 29034 -j ACCEPT 
-A INPUT -s 221.228.102.103/32 -p tcp -m multiport --dports 29034 -j ACCEPT 
-A INPUT -s 163.177.128.246/32 -p tcp -m multiport --dports 29034 -j ACCEPT 
-A INPUT -s 183.233.224.236/32 -p tcp -m multiport --dports 29034 -j ACCEPT 
-A INPUT -s 119.147.225.2/32 -p tcp -m multiport --dports 29034 -j ACCEPT 
-A INPUT -s 163.177.128.234/32 -p tcp -m multiport --dports 29034 -j ACCEPT 
-A INPUT -s 183.233.224.212/32 -p tcp -m multiport --dports 29034 -j ACCEPT 
-A INPUT -s 119.147.225.10/32 -p tcp -m multiport --dports 29034 -j ACCEPT 
-A INPUT -s 221.6.115.253/32 -p tcp -m multiport --dports 29034 -j ACCEPT 
-A INPUT -s 211.103.25.61/32 -p tcp -m multiport --dports 29034 -j ACCEPT 
-A INPUT -s 221.228.102.126/32 -p tcp -m multiport --dports 29034 -j ACCEPT 
-A INPUT -s 221.6.115.244/32 -p tcp -m multiport --dports 29034 -j ACCEPT 
-A INPUT -s 211.103.25.52/32 -p tcp -m multiport --dports 29034 -j ACCEPT 
-A INPUT -s 221.228.102.116/32 -p tcp -m multiport --dports 29034 -j ACCEPT 
-A INPUT -p udp -m udp --sport 53 -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT 
-A INPUT -p tcp -m multiport --sports 80,443,8080,29017,29200,29034 -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 28993,28994,28995,28996,28997,28998,28999,29000,29028 -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 80,443,2701,29017,29021,29200,29034 -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -s 10.10.0.0/21 -j ACCEPT 
-A INPUT -s 10.11.0.0/21 -j ACCEPT 
-A INPUT -d 124.243.220.74/32 -p tcp -m multiport --dports 29200,29017 -j ACCEPT 
-A INPUT -d 10.11.2.241/32 -p tcp -m multiport --dports 29200,29017 -j ACCEPT 
-A INPUT -s 192.168.255.11/32 -p tcp -m tcp --dport 10050 -j ACCEPT 
-A INPUT -s 123.56.66.235/32 -p tcp -m tcp --dport 10050 -j ACCEPT 
-A INPUT -s 120.27.92.233/32 -p tcp -m tcp --dport 10050 -j ACCEPT 
-A INPUT -s 192.168.255.8/32 -p tcp -m multiport --dports 22,873 -j ACCEPT 
-A INPUT -s 192.168.255.9/32 -p tcp -m multiport --dports 22,873 -j ACCEPT 
-A INPUT -s 192.168.155.8/32 -p tcp -m multiport --dports 22,873 -j ACCEPT 
-A INPUT -s 192.168.155.9/32 -p tcp -m multiport --dports 22,873 -j ACCEPT 
-A INPUT -s 10.11.0.9/32 -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 10.11.0.10/32 -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 10.10.0.10/32 -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 10.237.181.93/32 -p tcp -m tcp --dport 29024 -j ACCEPT 
-A INPUT -s 10.237.181.101/32 -p tcp -m tcp --dport 29024 -j ACCEPT 
-A INPUT -s 192.168.255.11/32 -p tcp -m tcp --dport 29024 -j ACCEPT 
-A INPUT -s 192.168.252.0/24 -j ACCEPT 
-A INPUT -s 111.200.195.0/24 -p tcp -m multiport --dports 4433,55101,55102,55022 -j ACCEPT 
-A INPUT -s 111.200.195.132/32 -j ACCEPT 
-A INPUT -s 42.96.199.176/32 -j ACCEPT 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A INPUT -j DROP 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
